2004-05-12  Drew Csillag  <drew_csillag@yahoo.com>

	* SkunkWeb/util/precompile.py.in: now compiles message catalogs too

2004-04-09  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/DT/DTLexer.py (findTags): now allows files to end
	in "<".

2004-04-05  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/AE/Cache.py: when checking for change of a file, now return
	the max of ctime and mtime, to support smbfs shares where the ctime
	isn't updated correctly.

2004-03-18  Drew Csillag  <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.retrying_bind): added
	retrying_bind so can call with either UNIX or TCP socket for the
	retry stuff

2004-03-17  Drew Csillag  <drew@loki.sai.local>

	* SkunkWeb/util/precompile.py.in: now when creating shadow
	directories, it will copy non-compilable things, and copy symlinks
	(not what they point to) to the shadow directory.

2004-03-15  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	break out of the retry loop if the socket bind succeeds.

2004-03-15  Drew Csillag <drew@loki.sai.local>

	* pylibs/SocketMan/SocketMan.py (SocketMan.addConnection): now
	retries a few times on bind in case the original isn't quite dead
	yet.

	* SkunkWeb/SkunkWeb/LogObj.py (redirectStdOutErr): now checks to
	see if stderr/stdout already redirected before redirecting again
	
	* SkunkWeb/skunkweb.py.in: now logs the exception *before* writing
	that skunkweb died abnormally so that you actually get to see the
	exception if writing to stderr fails.  Also logs any exception if
	we get the "server exited wayyy too soon" message.

2004-03-14  Jacob Smullyan  <smulloni@smullyan.org>

	* pylibs/xmlutils.py (XMLElement.__eq__, __ne__): added rich
	comparison methods for testing equality; fix for AttributeError.

2004-03-12  Jacob Smullyan <smulloni@smullyan.org>
	* pylibs/PyDO/PyDO2.py: removed use of string module
	in favor of string methods (stylistic nit-pick).
